unpackaged/main/default/objects/breadwinner_ns__BW_Return_Authorization__c/breadwinner_ns__BW_Return_Authorization__c.object-meta.xml
<CustomObject>
    <label>NetSuite Return Authorization</label>
    <nameField>
        <label>Rtn. Auth. #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Return Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>