unpackaged/main/default/objects/breadwinner_ns__BW_Return_Authorization__c/fields/breadwinner_ns__CreatedFrom_Invoice__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__CreatedFrom_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created From Invoice / Cash Sale</label>
    <referenceTo>breadwinner_ns__BW_Invoice__c</referenceTo>
    <relationshipLabel>Return Authorizations Created From this Invoice</relationshipLabel>
    <relationshipName>BWReturnAuthorizations</relationshipName>
    <type>Lookup</type>
</CustomField>