unpackaged/main/default/objects/breadwinner_ns__BW_Return_Authorization__c/fields/breadwinner_ns__CreatedFrom_SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__CreatedFrom_SalesOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created From Sales Order</label>
    <referenceTo>breadwinner_ns__BW_Sales_Order__c</referenceTo>
    <relationshipLabel>Return Authorizations Created From this Sales Order</relationshipLabel>
    <relationshipName>BWReturnAuthorizations</relationshipName>
    <type>Lookup</type>
</CustomField>