unpackaged/main/default/objects/breadwinner_ns__BW_Return_Authorization__c/fields/breadwinner_ns__DiscountTotal__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__DiscountTotal__c</fullName>
    <label>Discount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>