unpackaged/main/default/objects/breadwinner_ns__BW_Return_Authorization__c/fields/breadwinner_ns__SalesEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__SalesEffectiveDate__c</fullName>
    <label>Sales Effective Date</label>
    <type>Date</type>
</CustomField>