unpackaged/main/default/objects/breadwinner_ns__BW_Return_Authorization__c/fields/breadwinner_ns__SalesRepName__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__SalesRepName__c</fullName>
    <label>Sales Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>