unpackaged/main/default/objects/breadwinner_ns__BW_Return_Authorization__c/fields/breadwinner_ns__Tax2Total__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Tax2Total__c</fullName>
    <description>It is to store the Tax Total (PST) value</description>
    <label>Tax (PST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>