unpackaged/main/default/objects/breadwinner_ns__BW_Return_Authorization__c/fields/ncf_body_mhi_stripe_invoiceid__c.field-meta.xml
<CustomField>
    <fullName>ncf_body_mhi_stripe_invoiceid__c</fullName>
    <label>Stripe Invoice ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>